--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@ const NARRY_MINI_SRC = 'data:image/png;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gHYSU
 // ⚠️ Aponte aqui para a URL do seu Cloudflare Worker (proxy seguro)
 // Ex: https://narry-proxy.SEU-USUARIO.workers.dev
 const CLAUDE_API = 'https://misty-silence-e8e3.editor-narrymonpsena.workers.dev';
-const CLAUDE_KEY = ''; // Não é mais necessário — a chave fica no Worker
+// Chave gerenciada no Cloudflare Worker
 const EL_KEY    = 'sk_48b064d9ba9674417609e21c4a98a0583af3bb059f8431a1';
 const EL_VOICE  = 'tS45q0QcrDHqHoaWdCDR';
 const EL_URL    = `https://api.elevenlabs.io/v1/text-to-speech/${EL_VOICE}`;
